# global-wildfires-climate

./: .gitignore  Occurrence_By_Burned_Area.py  README.md  Spicy_Stats_README.md  app.py  pyproject.toml
data/: Forest_Fires_Dataset.csv  Forest_Fires_Dataset_Enhancedcopy.csv  Forest_Fires_Dataset_Final.csv  test.py
src/: burned_chart.py  cause_bar.py  cause_color_map_util.py  filters.py  filters_burned.py  map_plot.py  playground.ipynb  scatter_plot.py
