[project]
name = "global-wildfires-climate"
version = "1.0.0"
description = "<UPDATE ME>"
authors = [
  {name = "Your Name", email = "you@example.com"},
  {name = "Your Name", email = "you@example.com"},
  {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.11.12"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "plotly (>=6.5.2,<7.0.0)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
